MB-37643: Set expiry relative to uptime

The calculation of document expiry when max_ttl is > 30 days
didn't include the uptime of memcached. Once memcached had an
uptime > 30days the generated expiry was in the past.

Change-Id: Iee39808830e8a995ddc888dea8435d44cee0da7d
Reviewed-on: http://review.couchbase.org/121202
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>